Added second database with sample data.